[gd_scene load_steps=19 format=3 uid="uid://cmjsuqwv2asve"]

[ext_resource type="Script" path="res://menus/lobby_menu.gd" id="1_nhhgv"]
[ext_resource type="Texture2D" uid="uid://o46pxmjqiegb" path="res://assets/lobbyblue.png" id="2_elki4"]
[ext_resource type="FontFile" uid="uid://bfkw7o0lknp62" path="res://monogram.ttf" id="3_4m1du"]
[ext_resource type="AudioStream" uid="uid://biogtbsnbdp84" path="res://assets/cutemusic.wav" id="4_7fhld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dy55e"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clgml"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.784314)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2c3b"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Theme" id="Theme_c4j00"]
Button/styles/hover = SubResource("StyleBoxFlat_dy55e")
Button/styles/normal = SubResource("StyleBoxFlat_clgml")
Button/styles/pressed = SubResource("StyleBoxFlat_d2c3b")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pl82"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.784314)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5346j"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sbufc"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.784314)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3io3c"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="Theme" id="Theme_bbjyj"]
Button/styles/focus = SubResource("StyleBoxFlat_3pl82")
Button/styles/hover = SubResource("StyleBoxFlat_5346j")
Button/styles/normal = SubResource("StyleBoxFlat_sbufc")
Button/styles/pressed = SubResource("StyleBoxFlat_3io3c")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0y00q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v50tv"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.784314)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n1if"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6l4fe"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.929412)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="Theme" id="Theme_1y401"]
Button/styles/focus = SubResource("StyleBoxFlat_v50tv")
Button/styles/hover = SubResource("StyleBoxFlat_5n1if")
Button/styles/normal = SubResource("StyleBoxFlat_sbufc")
Button/styles/pressed = SubResource("StyleBoxFlat_6l4fe")

[node name="lobby_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhhgv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_elki4")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 14.0
offset_right = -11.0
offset_bottom = 71.0
grow_horizontal = 0
theme = SubResource("Theme_c4j00")
theme_override_fonts/font = ExtResource("3_4m1du")
theme_override_font_sizes/font_size = 50
text = " Back "

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.5
offset_top = -42.5
offset_right = 221.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_4m1du")
theme_override_font_sizes/font_size = 100
text = "Welcome!
Choose your game mode"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.5
offset_top = 134.01
offset_right = 317.5
offset_bottom = 195.01
grow_horizontal = 2
grow_vertical = 2

[node name="JoinButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../HostButton")
theme = SubResource("Theme_bbjyj")
theme_override_fonts/font = ExtResource("3_4m1du")
theme_override_font_sizes/font_size = 65
text = " JOIN MATCH "

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0y00q")

[node name="HostButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../JoinButton")
theme = SubResource("Theme_1y401")
theme_override_fonts/font = ExtResource("3_4m1du")
theme_override_font_sizes/font_size = 65
text = " HOST MATCH "

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7fhld")
volume_db = -12.543
autoplay = true
bus = &"Music"

[node name="lobby" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="lobby"]
layout_mode = 2
alignment = 1

[node name="PlayerList" type="ItemList" parent="lobby/VBoxContainer"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25

[node name="StartGame" type="Button" parent="lobby/VBoxContainer"]
custom_minimum_size = Vector2(200, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="Label" type="Label" parent="lobby"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Game will start automatically when there are 4 players in the lobby. Otherwise, click 'Start' to play with less people."

[node name="Join Match" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -73.0
offset_right = 140.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Join Match"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Join Match/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = " Join Match "

[node name="nickname" type="LineEdit" parent="Join Match/VBoxContainer"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
placeholder_text = "Enter name here"
max_length = 20

[node name="ipaddress" type="LineEdit" parent="Join Match/VBoxContainer"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
placeholder_text = "Enter ip address here"
max_length = 20

[node name="Submit" type="Button" parent="Join Match/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Submit"

[node name="Host Match" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -73.0
offset_right = 140.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Host Match"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Host Match/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = " Host Match "

[node name="nickname" type="LineEdit" parent="Host Match/VBoxContainer"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
placeholder_text = "Enter name here"
max_length = 20

[node name="Submit" type="Button" parent="Host Match/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Submit"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_join_button"]
[connection signal="pressed" from="HBoxContainer/HostButton" to="." method="_on_host_button"]
[connection signal="pressed" from="lobby/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Join Match/VBoxContainer/Submit" to="." method="_on_join_submit"]
[connection signal="pressed" from="Host Match/VBoxContainer/Submit" to="." method="on_host_submit"]
